# tensorrt_mb_ssd

./: CMakeLists.txt  README.md  main.cpp
